--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -18,7 +18,7 @@
                 <input type="password" id="password" name="password" class="form-control">
             </div>
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            <button type="submit" class="btn btn-primary">Sign In</button>
+            <button type="submit" class="btn btn-dark">Sign In</button>
         </form>
         <p>Don't have an account yet?</p> <a href="/user/signup">Sign Up Now!</a>
     </div>
