--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -14,12 +15,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="/shopping-cart"> <i class="fas fa-shopping-cart" aria-hidden="true"></i> Shopping Cart
+        <li class="shopping-cart">
+          <a href="/shopping-cart"> <i class="fas fa-shopping-cart" aria-hidden="true"></i> Cart
           <span class='badge'>{{session.cart.totalQty}}</span>
            </a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i>  User Management<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i>User<span class="caret"></span></a>
           <ul class="dropdown-menu">
                {{# if login}}
                       <li><a href="/user/profile">User Account</a></li>
@@ -37,3 +38,4 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div>
